--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2017-01-20  Andrew Senkevich  <andrew.senkevich@intel.com>
+
+	* config/i386/avx512bwintrin.h: Add k-mask registers shift intrinsics.
+	* config/i386/avx512dqintrin.h: Ditto.
+	* config/i386/avx512fintrin.h: Ditto.
+	* config/i386/i386-builtin-types.def: Add new types.
+	* gcc/config/i386/i386.c: Handle new types.
+	* config/i386/i386-builtin.def (__builtin_ia32_kshiftliqi)
+	(__builtin_ia32_kshiftlihi, __builtin_ia32_kshiftlisi)
+	(__builtin_ia32_kshiftlidi, __builtin_ia32_kshiftriqi)
+	(__builtin_ia32_kshiftrihi, __builtin_ia32_kshiftrisi)
+	(__builtin_ia32_kshiftridi): New.
+	* config/i386/sse.md (k<code><mode>): Rename *k<code><mode>.
+
 2017-01-19  Segher Boessenkool  <segher@kernel.crashing.org>
 
 	PR target/78875
