--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-20  Hristian Kirtchev  <kirtchev@adacore.com>
+
+	* sem_ch10.adb, sem_cat.adb: Minor reformatting.
+
 2017-01-20  Javier Miranda  <miranda@adacore.com>
 
 	* sem_ch3.adb (Access_Type_Declaration): Protect access to the
