--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-20  Alexander Monakov  <amonakov@ispras.ru>
+
+	* omp-low.c (omplow_simd_context): New struct.  Use it...
+	(lower_rec_simd_input_clauses): ...here and...
+	(lower_rec_input_clauses): ...here to hold common data.  Adjust all
+	references to idx, lane, max_vf, is_simt.
+
 2017-01-20  Graham Markall  <graham.markall@embecosm.com>
 
 	* config/arc/arc.h (LINK_SPEC): Use arclinux_nps emulation when
@@ -5,19 +12,19 @@
 
 2017-01-20  Martin Jambor  <mjambor@suse.cz>
 
-        * hsa.h: Renaed to hsa-common.h.  Adjusted a comment.
-        * hsa.c: Renaed to hsa-common.c.  Change include of gt-hsa.h to
-        gt-hsa-common.h.
-        * Makefile.in (OBJS): Rename hsa.o to hsa-common.o.
-        (GTFILES): Rename hsa.c to hsa-common.c.
-        * hsa-brig.c: Change include of hsa.h to hsa-common.h.
-        * hsa-dump.c: Likewise.
-        * hsa-gen.c: Likewise.
-        * hsa-regalloc.c: Likewise.
-        * ipa-hsa.c: Likewise.
-        * omp-expand.c: Likewise.
-        * omp-low.c: Likewise.
-        * toplev.c: Likewise.
+	* hsa.h: Renaed to hsa-common.h.  Adjusted a comment.
+	* hsa.c: Renaed to hsa-common.c.  Change include of gt-hsa.h to
+	gt-hsa-common.h.
+	* Makefile.in (OBJS): Rename hsa.o to hsa-common.o.
+	(GTFILES): Rename hsa.c to hsa-common.c.
+	* hsa-brig.c: Change include of hsa.h to hsa-common.h.
+	* hsa-dump.c: Likewise.
+	* hsa-gen.c: Likewise.
+	* hsa-regalloc.c: Likewise.
+	* ipa-hsa.c: Likewise.
+	* omp-expand.c: Likewise.
+	* omp-low.c: Likewise.
+	* toplev.c: Likewise.
 
 2017-01-20  Marek Polacek  <polacek@redhat.com>
 
