--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2017-01-20  Alexander Monakov  <amonakov@ispras.ru>
+
+	* omp-expand.c (expand_omp_simd): Clear PROP_gimple_lomp_dev regardless
+	of safelen status.
+	* omp-offload.c (pass_omp_device_lower::gate): Use PROP_gimple_lomp_dev.
+	* passes.c (dump_properties): Handle PROP_gimple_lomp_dev.
+	* tree-inline.c (expand_call_inline): Propagate PROP_gimple_lomp_dev.
+
 2017-01-20  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	PR target/71270
